install( FILES
    images/background.png
    images/iconHome.png
    images/iconDisk.png
    images/infoBack.png
    images/logo.png
    images/mdArk.png
    images/mdSag.png
    images/mdSol.png
    images/media_r1_c2.png
    images/progress.png
    images/solTab.png
    images/tbArk.png
    images/tbSag.png
    images/tbSol.png

    DESTINATION ${DATA_INSTALL_DIR}/sysinfo/about/images
)

install (FILES
   index.html
   stil.css
   DESTINATION ${DATA_INSTALL_DIR}/sysinfo/about
)
